--- a/Project.toml
+++ b/Project.toml
@@ -3,8 +3,12 @@ uuid = "c11bb9a7-2755-425a-88f3-ebe93bbdb91f"
 authors = ["Tim Holy <tim.holy@gmail.com> and contributors"]
 version = "1.0.0-DEV"
 
+[deps]
+StaticArrays = "90137ffa-7385-5640-81b9-e52037218182"
+
 [compat]
-julia = "1.6.7"
+StaticArrays = "1"
+julia = "1.10"
 
 [extras]
 Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
