--- a/Project.toml
+++ b/Project.toml
@@ -13,12 +13,15 @@ Makie = "ee78f7c6-11fb-53f2-987a-cfe4a2b5a57a"
 FlyThroughPathsMakieExt = "Makie"
 
 [compat]
+LinearAlgebra = "1"
 Makie = "0.21"
 StaticArrays = "1"
+Test = "1"
 julia = "1.10"
 
 [extras]
+LinearAlgebra = "37e2e46d-f89d-539d-b4ee-838fcccc9c8e"
 Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
 
 [targets]
-test = ["Test"]
+test = ["LinearAlgebra", "Test"]
