--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -52,24 +52,34 @@ jobs:
       contents: write
       statuses: write
     steps:
+      - name: Install binary dependencies
+        run: sudo apt-get update && sudo apt-get install -y xorg-dev mesa-utils xvfb libgl1 freeglut3-dev libxrandr-dev libxinerama-dev libxcursor-dev libxi-dev libxext-dev
       - uses: actions/checkout@v4
       - uses: julia-actions/setup-julia@v2
         with:
           version: '1'
       - uses: julia-actions/cache@v2
       - name: Configure doc environment
-        shell: julia --project=docs --color=yes {0}
+        shell: xvfb-run -s '-screen 0 1024x768x24' julia --project=docs --color=yes {0}
         run: |
           using Pkg
           Pkg.develop(PackageSpec(path=pwd()))
           Pkg.instantiate()
+        env:
+          DISPLAY: ':0'
       - uses: julia-actions/julia-buildpkg@v1
+        with:
+          prefix: xvfb-run -s '-screen 0 1024x768x24'
+        env:
+          DISPLAY: ':0'
       - uses: julia-actions/julia-docdeploy@v1
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           DOCUMENTER_KEY: ${{ secrets.DOCUMENTER_KEY }}
       - name: Run doctests
-        shell: julia --project=docs --color=yes {0}
+        shell:  xvfb-run -s '-screen 0 1024x768x24' julia --project=docs --color=yes {0}
+        env: 
+          DISPLAY: ':0'
         run: |
           using Documenter: DocMeta, doctest
           using FlyThroughPaths
