--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -45,43 +45,36 @@ jobs:
           token: ${{ secrets.CODECOV_TOKEN }}
           fail_ci_if_error: false
   docs:
-    name: Documentation
+    name: Build and deploy documentation
     runs-on: ubuntu-latest
-    permissions:
-      actions: write # needed to allow julia-actions/cache to proactively delete old caches that it has created
-      contents: write
-      statuses: write
     steps:
       - name: Install binary dependencies
         run: sudo apt-get update && sudo apt-get install -y xorg-dev mesa-utils xvfb libgl1 freeglut3-dev libxrandr-dev libxinerama-dev libxcursor-dev libxi-dev libxext-dev
       - uses: actions/checkout@v4
-      - uses: julia-actions/setup-julia@v2
+      - name: Download all workflow run artifacts
+        uses: actions/download-artifact@v4
+      - uses: julia-actions/setup-julia@latest
         with:
           version: '1'
       - uses: julia-actions/cache@v2
-      - name: Configure doc environment
-        shell: xvfb-run -s '-screen 0 1024x768x24' julia --project=docs --color=yes {0}
+      - name: Install documentation dependencies
         run: |
-          using Pkg
-          Pkg.develop(PackageSpec(path=pwd()))
-          Pkg.instantiate()
+          xvfb-run -s '-screen 0 1024x768x24' julia --project=docs -e '
+            using Pkg
+            Pkg.develop(PackageSpec(path=pwd()))
+            Pkg.add(name = "DocumenterVitepress", rev = "master")
+            Pkg.instantiate()'
         env:
           DISPLAY: ':0'
-      - uses: julia-actions/julia-buildpkg@v1
-        with:
-          prefix: xvfb-run -s '-screen 0 1024x768x24'
+      - name: Build and deploy
         env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }} # If authenticating with GitHub Actions token
+          DOCUMENTER_KEY: ${{ secrets.DOCUMENTER_KEY }} # If authenticating with SSH deploy key
           DISPLAY: ':0'
-      - uses: julia-actions/julia-docdeploy@v1
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          DOCUMENTER_KEY: ${{ secrets.DOCUMENTER_KEY }}
-      - name: Run doctests
-        shell:  xvfb-run -s '-screen 0 1024x768x24' julia --project=docs --color=yes {0}
-        env: 
-          DISPLAY: ':0'
-        run: |
+        run: xvfb-run -s '-screen 0 1024x768x24' julia --project=docs/ docs/make.jl deploy
+      - name: Run doctests  
+        run: julia --project=docs -e '
           using Documenter: DocMeta, doctest
           using FlyThroughPaths
           DocMeta.setdocmeta!(FlyThroughPaths, :DocTestSetup, :(using FlyThroughPaths); recursive=true)
-          doctest(FlyThroughPaths)
+          doctest(FlyThroughPaths)'
