Add a slerp (spherical interpolation) move for orbits etc.
This is still pretty hacky, but it works.  The idea is that you can slerp every aspect of the view state, and you can also center it about some point so that you can rotate about that point.

This is not meant to be necessarily immediately user-usable, but rather a more foundational move for e.g. orbiting around a point or rotating a camera.  You can use e.g. Rotations.AngleAxis to set the final point and then this will go there but on the surface of a sphere parameterized by the original and final points, and the center point.

--- a/Project.toml
+++ b/Project.toml
@@ -4,6 +4,7 @@ authors = ["Tim Holy <tim.holy@gmail.com> and contributors"]
 version = "0.1.1"
 
 [deps]
+LinearAlgebra = "37e2e46d-f89d-539d-b4ee-838fcccc9c8e"
 Rotations = "6038ab10-8711-5258-84ad-4b1120ba62dc"
 StaticArrays = "90137ffa-7385-5640-81b9-e52037218182"
 
@@ -21,8 +22,7 @@ Test = "1"
 julia = "1.10"
 
 [extras]
-LinearAlgebra = "37e2e46d-f89d-539d-b4ee-838fcccc9c8e"
 Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
 
 [targets]
-test = ["LinearAlgebra", "Test"]
+test = ["Test"]
