--- a/Project.toml
+++ b/Project.toml
@@ -1,7 +1,7 @@
 name = "FlyThroughPaths"
 uuid = "c11bb9a7-2755-425a-88f3-ebe93bbdb91f"
 authors = ["Tim Holy <tim.holy@gmail.com> and contributors"]
-version = "0.1.2"
+version = "0.1.3"
 
 [deps]
 StaticArrays = "90137ffa-7385-5640-81b9-e52037218182"
@@ -14,7 +14,7 @@ FlyThroughPathsMakieExt = "Makie"
 
 [compat]
 LinearAlgebra = "1"
-Makie = "0.21, 0.22, 0.23"
+Makie = "0.21, 0.22, 0.23, 0.24"
 StaticArrays = "1"
 Test = "1"
 julia = "1.10"
